--- a/TruthOrDareUI/TruthOrDareUI/Views/MainPage.xaml
+++ b/TruthOrDareUI/TruthOrDareUI/Views/MainPage.xaml
@@ -2,10 +2,16 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="TruthOrDareUI.Views.MainPage"
-             Title="{Binding Title}">
+             Title="{Binding Title}"
+             NavigationPage.HasNavigationBar="False">
 
-    <StackLayout HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand">
-        <Label Text="Welcome to Xamarin Forms and Prism!" />
+    <StackLayout>
+        <StackLayout Orientation="Horizontal" HorizontalOptions="Center" Margin="0,72,0,0">
+            <Label TextColor="{StaticResource SecondaryTextColor}" FontSize="36" Text="Truth"/>
+            <Label FontSize="36" Text="or"/>
+            <Label TextColor="{StaticResource SecondaryTextColor}" FontSize="36" Text="Dare"/>
+        </StackLayout>
+
     </StackLayout>
 
 </ContentPage>
