--- a/TruthOrDareUI/TruthOrDareUI/Views/MainPage.xaml
+++ b/TruthOrDareUI/TruthOrDareUI/Views/MainPage.xaml
@@ -12,6 +12,10 @@
             <Label TextColor="{StaticResource SecondaryTextColor}" FontSize="36" Text="Dare"/>
         </StackLayout>
 
+        <Button MinimumWidthRequest="150" MinimumHeightRequest="150" HorizontalOptions="Center" BorderRadius="50" FontAttributes="Bold" FontSize="28" Text="START" Margin="0,124,0,0"/>
+
+        <Button BackgroundColor="Transparent" TextColor="{StaticResource SecondaryTextColor}" FontSize="20" Text="Settings" Margin="0,52,0,0"/>
+        <Button BackgroundColor="Transparent" TextColor="{StaticResource SecondaryTextColor}" FontSize="20" Text="About" Margin="0,52,0,0"/>
     </StackLayout>
 
 </ContentPage>
