--- a/TruthOrDareUI/TruthOrDareUI/Views/MainPage.xaml
+++ b/TruthOrDareUI/TruthOrDareUI/Views/MainPage.xaml
@@ -12,7 +12,7 @@
             <Label TextColor="{StaticResource SecondaryTextColor}" FontSize="36" Text="Dare"/>
         </StackLayout>
 
-        <Button MinimumWidthRequest="150" MinimumHeightRequest="150" HorizontalOptions="Center" VerticalOptions="Center" BorderRadius="50" FontAttributes="Bold" FontSize="28" Text="START" Margin="0,56,0,0"/>
+        <Button WidthRequest="150" HeightRequest="150" HorizontalOptions="Center" VerticalOptions="Center" BorderRadius="75" FontAttributes="Bold" FontSize="28" Text="START" Margin="0,56,0,0"/>
 
         <Button Command="{Binding NavigateCommand}" CommandParameter="SettingsPage" BackgroundColor="Transparent" TextColor="{StaticResource SecondaryTextColor}" FontSize="20" Text="Settings" Margin="0,24,0,0"/>
         <Button Command="{Binding NavigateCommand}" CommandParameter="AboutPage" BackgroundColor="Transparent" TextColor="{StaticResource SecondaryTextColor}" FontSize="20" Text="About" Margin="0,24,0,0"/>
