--- a/TruthOrDareUI/TruthOrDareUI/App.xaml
+++ b/TruthOrDareUI/TruthOrDareUI/App.xaml
@@ -23,6 +23,7 @@
             <Style TargetType="Button">
                 <Setter Property="BackgroundColor" Value="{StaticResource MainButtonColor}"/>
                 <Setter Property="TextColor" Value="White"/>
+                <Setter Property="FontAttributes" Value="Bold"/>
             </Style>
 
             <Style TargetType="Entry">
