--- a/TruthOrDareUI/TruthOrDareUI/Views/GamePage.xaml
+++ b/TruthOrDareUI/TruthOrDareUI/Views/GamePage.xaml
@@ -12,7 +12,7 @@
 
         <Label HorizontalOptions="Center" FontSize="20" Text="Let's start..." Margin="0,72,0,38"/>
 
-        <Button Command="{Binding StartCommand}" WidthRequest="150" HeightRequest="150" HorizontalOptions="Center" BorderRadius="75" IsVisible="{Binding ShowStartBtn}" FontSize="28" Text="START"/>
+        <Button Command="{Binding StartCommand}" WidthRequest="150" HeightRequest="150" HorizontalOptions="Center" BorderRadius="75" IsVisible="{Binding ShowStartBtn}" FontSize="28" Text="{Binding Time}"/>
 
         <StackLayout x:Name="TruthOrDarePicker" Orientation="Horizontal" IsVisible="{Binding ShowPicker}">
             <Button WidthRequest="100" HeightRequest="100" HorizontalOptions="CenterAndExpand" BorderRadius="50" Text="Truth"/>
